--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-//	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//	implementation 'org.postgresql:postgresql:42.7.3'
+	//HashiCorp Vault integration
+	implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
 	// lombok - annotations
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
